--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,13 +1,11 @@
 {
   "manifest_version": 3,
   "name": "CF Cheater Highlighter",
-  "version": "1.0",
+  "version": "1.0.0",
   "description": "Highlights Codeforces handles marked as cheaters.",
-  "permissions": [
-    "storage"
-  ],
+  "permissions": [],
   "host_permissions": [
-    "https://your-domain.com/cheaters.json"
+    "https://macaquedev.github.io/cf-cheater-highlighter/*"
   ],
   "content_scripts": [
     {
@@ -15,5 +13,11 @@
       "js": ["content-script.js"],
       "css": ["styles.css"]
     }
-  ]
+  ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{27fc8722-82bf-4cbe-81da-90dd13fb5b01}", 
+      "strict_min_version": "109.0"
+    }
+  }
 }
