--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.19.1",
     "lexical": "^0.32.1",
