--- a/.github/workflows/export-cheaters.yml
+++ b/.github/workflows/export-cheaters.yml
@@ -32,9 +32,14 @@ jobs:
         run: npm run export-cheaters
 
       - name: Commit and push cheaters.json
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add cheaters.json
           git commit -m 'Update cheaters.json [auto]' || echo 'No changes to commit'
-          git push
+          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git HEAD:${{ github.ref_name }}
+
+permissions:
+  contents: write
