--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.5.2",
     "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.19.1",
@@ -24,7 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,7 +38,8 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "root": true
   },
   "browserslist": {
     "production": [
