huge rich text improvements added more general md support syntax highlighting moves to its own component

--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "@chakra-ui/toast": "^7.0.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@lexical/link": "^0.32.1",
-    "@lexical/list": "^0.32.1",
-    "@lexical/react": "^0.32.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -17,13 +14,15 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.19.1",
-    "lexical": "^0.32.1",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
