added rating update script needs admin sdk

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/user-event": "^14.5.2",
     "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.19.1",
     "next-themes": "^0.4.6",
+    "node-fetch": "^2.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
@@ -33,7 +35,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "import-cheaters": "node scripts/importCheaters.js",
-    "export-cheaters": "node scripts/exportCheaters.js"
+    "export-cheaters": "node scripts/exportCheaters.js",
+    "update-ratings": "node scripts/updateCheaterRatings.js"
   },
   "eslintConfig": {
     "extends": [
