--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 .env.test.local
 .env.production.local
 
+# Firebase service account key (contains sensitive credentials)
+serviceAccountKey.json
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
