added script to add firebase config to .env also removed some unneeded stuff

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@
 # Firebase service account key (contains sensitive credentials)
 serviceAccountKey.json
 
+# Firebase config
+firebaseConfig.js
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
