--- a/.github/workflows/update-cheater-info.yml
+++ b/.github/workflows/update-cheater-info.yml
@@ -9,8 +9,13 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout only needed files
         uses: actions/checkout@v3
+        with:
+          sparse-checkout: |
+            scripts/updateCheaterInfo.js
+            package.json
+            package-lock.json
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
