--- a/.github/workflows/update-cheater-info.yml
+++ b/.github/workflows/update-cheater-info.yml
@@ -23,8 +23,8 @@ jobs:
           node-version: '18'
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install script dependencies
+        run: cd scripts && npm ci
 
       - name: Decode service account key
         run: |
@@ -32,4 +32,4 @@ jobs:
           echo "Service account key decoded and saved"
 
       - name: Run update cheater info script
-        run: node scripts/updateCheaterInfo.js
+        run: cd scripts && node updateCheaterInfo.js
